--- a/src/app/v2/components/course-item/course-item.component.html
+++ b/src/app/v2/components/course-item/course-item.component.html
@@ -26,36 +26,30 @@
 >
   <a
     style="cursor: pointer"
-    class="text-xl font-semibold text-blue-600 hover:underline"
+    class="text-xl font-semibold cards-title-color hover:underline"
   >
     {{ data.titulo }}
   </a>
-
+  @if (data?.recomendado) {
+  <p class="text-md cards-title-color pb-2">
+    <span style="color: #eab308">&#9733;</span> <strong>Te recomendamos</strong>
+  </p>
+  }
   <!-- Etiquetas de los cursos -->
   <p class="mb-1 flex flex-wrap gap-1">
-    @if (data.idioma.toLowerCase() === 'ingles') {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-      En Inglés
-    </span>
-    } @if (data.tipo.toLowerCase() === 'de pago') {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-      De Pago
-    </span>
-    } @if (data.tipo.toLowerCase() === 'gratuito') {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-      Gratuito
-    </span>
-    } @if(data.modalidad.toLowerCase() === 'online'){
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-      Online
-    </span>
-    } @if (data.modalidad.toLowerCase() === 'presencial') {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-      Presencial
-    </span>
+    @if (data?.idioma?.toLowerCase() === 'ingles') {
+    <span class="border cards-title-color px-2 py-1 text-xs"> En Inglés </span>
+    } @if (data?.tipo?.toLowerCase() === 'de pago') {
+    <span class="border cards-title-color px-2 py-1 text-xs"> De Pago </span>
+    } @if (data?.tipo?.toLowerCase() === 'gratuito') {
+    <span class="border cards-title-color px-2 py-1 text-xs"> Gratuito </span>
+    } @if(data?.modalidad?.toLowerCase() === 'online'){
+    <span class="border cards-title-color px-2 py-1 text-xs"> Online </span>
+    } @if (data?.modalidad?.toLowerCase() === 'presencial') {
+    <span class="border cards-title-color px-2 py-1 text-xs"> Presencial </span>
     } @for (tipo of data.tipo_de_conocimiento; track $index) {
     <span
-      class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+      class="border cards-title-color px-2 py-1 text-xs"
       style="margin-right: 4px"
     >
       {{ tipo }}
