--- a/src/app/v2/components/article-item/article-item.component.html
+++ b/src/app/v2/components/article-item/article-item.component.html
@@ -1,8 +1,8 @@
 @if (simplified) {
 <article class="bg-gray-100 p-4 border">
-  <h3 class="text-xl font-bold mb-2">{{ data?.titulo }}</h3>
+  <h3 class="text-lg font-bold mb-2 cards-title-color">{{ data?.titulo }}</h3>
   <span
-    style="font-size: 0.9rem"
+    class="cards-title-color text-xs"
     [innerHTML]="
       resourceService.sanitizedString(data.resumen) | truncate : 120 : true
     "
@@ -14,7 +14,7 @@
     (click)="onOpenModal()"
     (keypress.enter)="onOpenModal()"
     (keypress.space)="onOpenModal()"
-    class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
+    class="font-bold py-2 cards-title-color transition duration-300 ease-in-out transform hover:scale-105"
   >
     Ver Más
   </a>
@@ -28,7 +28,7 @@
 >
   <a
     style="cursor: pointer"
-    class="text-xl font-semibold text-blue-600 hover:underline"
+    class="text-xl font-semibold cards-title-color hover:underline"
   >
     {{ data.titulo }}
   </a>
@@ -36,17 +36,18 @@
   <!-- Etiquetas de los articulos -->
   <p class="mb-1 flex flex-wrap gap-1">
     @if (data.idioma.toLowerCase() === 'ingles') {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border border-blue-100 cards-title-color px-2 py-1 text-xs">
       En Inglés
     </span>
     } @if(data.articulo_paper.toLowerCase() === 'paper'){
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border border-blue-100 cards-title-color px-2 py-1 text-xs">
       Paper
     </span>
     }
   </p>
   <!-- Descripción del curso -->
   <span
+    class="cards-title-color"
     [innerHTML]="
       resourceService.sanitizedString(
         data.resumen | truncate : 400 : true,
