--- a/src/app/v2/components/financing-item/financing-item.component.html
+++ b/src/app/v2/components/financing-item/financing-item.component.html
@@ -26,7 +26,7 @@
 >
   <a
     style="cursor: pointer"
-    class="text-xl font-semibold text-blue-600 hover:underline"
+    class="text-xl font-semibold cards-title-color hover:underline"
   >
     {{ data.titulo }}
   </a>
@@ -34,19 +34,20 @@
   <!-- Etiquetas de los articulos -->
   <p class="mb-1 flex flex-wrap gap-1">
     @if (data.tipo_financiamiento.toLowerCase() === 'público') {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border cards-title-color px-2 py-1 text-xs">
       Financiamiento: Público
     </span>
     }
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border cards-title-color px-2 py-1 text-xs">
       Institución: {{ data.institucion }}
     </span>
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border cards-title-color px-2 py-1 text-xs">
       Categoría: {{ data.categoria }}
     </span>
   </p>
   <!-- Descripción del curso -->
   <span
+    class="cards-title-color"
     [innerHTML]="
       resourcesService.sanitizedString(data.descripcion | truncate : 400 : true)
     "
