--- a/src/app/v2/components/projects-item/projects-item.component.html
+++ b/src/app/v2/components/projects-item/projects-item.component.html
@@ -1,9 +1,9 @@
 @if (simplified) {
 <article class="bg-gray-100 p-4 border">
-  <h3 class="text-xl font-bold mb-2">{{ data?.titulo }}</h3>
+  <h3 class="text-xl cards-title-color font-bold mb-2">{{ data?.titulo }}</h3>
   <!-- Descripción del curso -->
   <span
-    style="font-size: 0.9rem"
+    class="cards-title-color"
     [innerHTML]="
       resourcesService.sanitizedString(
         data.resumen_de_la_solucion_ | truncate : 120 : true
@@ -32,7 +32,7 @@
 >
   <a
     style="cursor: pointer"
-    class="text-xl font-semibold text-blue-600 hover:underline"
+    class="text-xl font-semibold cards-title-color hover:underline"
   >
     {{ data.titulo }}
   </a>
@@ -40,21 +40,22 @@
   <!-- Etiquetas de los articulos -->
   <p class="mb-1 flex flex-wrap gap-1">
     @if(data.origen_){
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border cards-title-color px-2 py-1 text-xs">
       Origen: {{ data.origen_ }}
     </span>
     } @if (data.localidad) {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border cards-title-color px-2 py-1 text-xs">
       Localidad: {{ data.localidad }}
     </span>
     } @if (data.aplicabilidad_regional_) {
-    <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+    <span class="border cards-title-color px-2 py-1 text-xs">
       Aplicabilidad Regional: {{ data.aplicabilidad_regional_ }}
     </span>
     }
   </p>
   <!-- Descripción del curso -->
   <span
+    class="cards-title-color"
     [innerHTML]="
       resourcesService.sanitizedString(
         data.resumen_de_la_solucion_ | truncate : 400 : true
