--- a/src/app/v2/components/search-controls/search-controls.component.html
+++ b/src/app/v2/components/search-controls/search-controls.component.html
@@ -105,7 +105,7 @@
   <ng-container *ngFor="let term of searchKeywords">
     <span
       style="padding: 4px 12px"
-      class="badge border border-blue-100 text-blue-600 px-2 py-1 text-xs suggested-term me-2 mb-2"
+      class="badge cards-title-color border px-2 py-1 text-xs suggested-term me-2 mb-2"
       (click)="onAddSuggestedTerm(term)"
       (keypress)="handleKeyPress($event, term)"
       tabindex="0"
