--- a/src/app/v2/modules/landing-page2/landing-page2.component.html
+++ b/src/app/v2/modules/landing-page2/landing-page2.component.html
@@ -2,7 +2,8 @@
 <header class="bg-[rgb(31,41,55)] pt-40 pb-20 px-4">
   <div class="max-w-7xl mx-auto text-center">
     <h1 class="text-3xl md:text-5xl font-bold text-white mb-6">
-      Conecta con los proveedores de la Región de los Lagos
+      Conecta con los proveedores de la Región de los Lagos y actualizate con
+      nuestros cursos de formación.
     </h1>
     <div
       class="flex flex-col md:flex-row items-center justify-center gap-2 max-w-xl mx-auto w-full"
@@ -11,13 +12,14 @@
         type="text"
         [(ngModel)]="searchQuery"
         placeholder="Ingresa palabras claves a buscar..."
-        class="flex-1 rounded-l-md rounded-r-md md:rounded-r-none py-3 px-4 w-full text-gray-700 focus:outline-none"
+        class="flex-1 hidden rounded-l-md rounded-r-md md:rounded-r-none py-3 px-4 w-full text-gray-700 focus:outline-none"
       />
       <button
-        (click)="onSearch()"
+        href="/buscador"
+        routerLink="/buscador"
         class="bg-[#EAB308] text-white font-semibold py-3 px-6 rounded-md hover:bg-yellow-600 transition-colors"
       >
-        Buscar Proveedores
+        Conecta e Informate
       </button>
     </div>
     <p class="text-gray-300 mt-4 max-w-md mx-auto">
