--- a/src/app/v2/components/title-section/title-section.component.html
+++ b/src/app/v2/components/title-section/title-section.component.html
@@ -6,11 +6,7 @@
     <h2 class="hero-description">
       {{ description }}
     </h2>
-    <a
-      [routerLink]="buttonLink"
-      [href]="buttonLink"
-      class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
-    >
+    <a [routerLink]="buttonLink" [href]="buttonLink" class="btn-primary-white">
       {{ buttonText }}
       <svg
         class="w-5 h-5 ml-2 -mr-1"
