--- a/src/app/v2/modules/landing-page2/landing-page2.component.html
+++ b/src/app/v2/modules/landing-page2/landing-page2.component.html
@@ -17,7 +17,7 @@
       <button
         href="/buscador"
         routerLink="/buscador"
-        class="bg-[#EAB308] text-white font-semibold py-3 px-6 rounded-md hover:bg-yellow-600 transition-colors"
+        class="btn-primary-yellow"
       >
         Conecta e Informate
       </button>
