--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -134,7 +134,7 @@
               'https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing'
             )
           "
-          class="inline-block bg-blue-600 text-white font-bold py-3 px-6 hover:bg-blue-700 transition duration-300"
+          class="btn-primary-yellow"
         >
           <svg
             class="inline-block w-6 h-6 mr-2"
