modelo proveedores separado en partes

--- a/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
+++ b/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
@@ -31,38 +31,40 @@
 
       <!-- Take Survey Button -->
       <div class="lg:col-span-1">
-        <!--Modelo de madurez-->
-        @if (modeloCaracter()) {
-        <button
-          disabled
-          (click)="openLink()"
-          class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700"
-        >
-          Modelo de Caracterización de Proveedores
-          <svg
-            aria-hidden="true"
-            class="w-5 h-5 text-blue-700"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </button>
-        }@else {
-        <div class="lg:col-span-1">
+        <!-- Modelo de madurez nuevo-->
+        <ng-container *ngFor="let item of titlesSurvey; let i = index">
+          @if (getSurveyData(i+1)) {
           <button
-            (click)="openLink()"
-            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
+            disabled
+            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700"
           >
-            Realizar Modelo de Caracterización
+            {{ titlesSurvey[i] }}
+            <svg
+              style="width: 50px"
+              aria-hidden="true"
+              class="w-5 h-5 text-blue-700"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
           </button>
-        </div>
-        }
+          }@else {
+          <div class="lg:col-span-1">
+            <button
+              routerLink="/modelo-caracterizacion/{{ i + 1 }}"
+              class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
+            >
+              {{ titlesSurvey[i] }}
+            </button>
+          </div>
+          }
+        </ng-container>
       </div>
     </div>
   </section>
