--- a/src/app/v2/modules/survey-form/survey-form.component.scss
+++ b/src/app/v2/modules/survey-form/survey-form.component.scss
@@ -15,3 +15,17 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.progress-bar-container {
+  position: relative;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 8px;
+  position: relative;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  transition: width 0.3s ease-in-out;
+}
