--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -2,13 +2,13 @@
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 <div>
   <!--Login como empresa y modelo completado-->
-  @if (authState()===AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
-  Role.Empresa) {
+  @if (authState()===AuthState.LoggedIn && currentUser()?.type ===
+  UserType.COMPANY) {
   <section class="max-w-7xl mx-auto px-4 py-8">
     <!-- Company Header -->
     <h1 class="text-4xl font-bold text-gray-700 mb-8">
       <strong>Empresa:</strong>
-      {{ currentUser()?.nombreEmpresa ?? "No disponible" }}
+      {{ currentUser()?.name ?? "No disponible" }}
     </h1>
     @if (modeloMadurez()) {
     <h2 class="text-xl font-bold text-gray-700 mb-8">
