--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -2,16 +2,13 @@
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 <div>
   <!--Login como empresa y modelo completado-->
-  @if (authState()===AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
-  Role.Usuario) {
+  @if (authState()===AuthState.LoggedIn && currentUser()?.type ===
+  UserType.STARTUP) {
   <section class="max-w-7xl mx-auto px-4 py-8">
     <!-- Company Header -->
     <h1 class="text-4xl font-bold text-gray-700 mb-8">
       <strong> </strong>
-      {{
-        currentUser()?.nombreRepresentante?.toLocaleUpperCase() ??
-          "No disponible"
-      }}
+      {{ currentUser()?.name?.toLocaleUpperCase() ?? "No disponible" }}
     </h1>
 
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
