--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -186,6 +186,24 @@
                 </div>
               </div>
             </div>
+            <!-- Select Input -->
+            <div *ngSwitchCase="'select'">
+              <select
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                [formControlName]="field.name"
+                [id]="field.name"
+              >
+                <option value="" disabled selected>
+                  {{ field.placeholder }}
+                </option>
+                <option
+                  *ngFor="let option of field.options"
+                  [value]="option.value"
+                >
+                  {{ option.label }}
+                </option>
+              </select>
+            </div>
             <!-- Rating Input -->
             <div *ngSwitchCase="'rating'" class="mb-3">
               <div style="gap: 12px" class="flex items-center">
@@ -230,6 +248,7 @@
             ></span>
             Las contraseñas coinciden
           </div>
+
           <!-- Error message for password mismatch -->
           <div
             *ngIf="field.name === 'password_confirm' && errorGeneral"
@@ -246,6 +265,27 @@
           >
             {{ field.error }}
           </div>
+        </div>
+      </div>
+      <!-- Añade este bloque donde consideres apropiado dentro del formulario -->
+      <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="w-full px-3">
+          <label
+            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+            for="logo"
+          >
+            Logo de la Empresa o Perfil (Opcional)
+          </label>
+          <input
+            type="file"
+            accept="image/*"
+            (change)="onFileSelected($event)"
+            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+            id="logo"
+          />
+          <small class="text-gray-600"
+            >Formato aceptado: JPG, PNG. Tamaño máximo: 200KB.</small
+          >
         </div>
       </div>
 
